--- a/src/index.css
+++ b/src/index.css
@@ -13,16 +13,14 @@ code {
 }
 
 .typewriter-screen {
-  font-family: 'Menlo', 'Monaco', 'Courier New', monospace;
   background-color: black;
-  color: #00ff00;
-  font-family: 'Share Tech Mono', monospace;
+  color: #00FF00;
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 1.3rem;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(1rem + 0.5vw);
-
 }
 
 .cursor {
@@ -34,4 +32,5 @@ code {
 @keyframes blink {
   50% { opacity: 0; }
 }
+
 
