Add begin button

--- a/src/index.css
+++ b/src/index.css
@@ -19,9 +19,11 @@ code {
   font-size: 1.3rem;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
 
 .cursor {
   display: inline-block;
