--- a/src/index.css
+++ b/src/index.css
@@ -134,8 +134,9 @@ body {
 }
 
 .dashboard-form button:hover {
-  background: #00FF00;
+  background-color: #00ff00;
   color: black;
+  box-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00;
 }
 
 .dashboard-table {
