--- a/src/index.css
+++ b/src/index.css
@@ -596,7 +596,10 @@ input[type=number] {
 
   /* Graph container */
   .dashboard-graph-section {
-    padding: 0 0.5rem;
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+    width: 105%; /* makes it slightly wider */
+    margin-left: -2.5%;
   }
 
   .dashboard-section-title {
