--- a/src/index.css
+++ b/src/index.css
@@ -609,6 +609,11 @@ input[type=number] {
     
   }
 
+  .left-shift-chart {
+    margin-left: -1rem;
+    width: calc(100% + 1rem);
+}
+
   .dashboard-section-title {
     font-size: 1rem;
     margin-top: 2rem;
