--- a/src/index.css
+++ b/src/index.css
@@ -614,7 +614,6 @@ input[type=number] {
   .dashboard-title {
     font-size: 1.2rem;
     margin-top: 3rem; /* Push it below the buttons */
-    width: 80%;
   }
 
   /* Form */
@@ -742,6 +741,20 @@ input[type=number] {
     box-shadow: 0 0 6px #00ff00, 0 0 12px #00ff00;
   }
 
+  .help-icon {
+    display: inline-block;
+    background: black;
+    border: 2px solid #00ff00;
+    color: #00ff00;
+    font-size: 0.4rem;
+    font-weight: bold;
+    border-radius: 50%;
+    width: 0.4rem;
+    height: 0.4rem;
+    text-align: center;
+    line-height: 0.6rem;
+    box-shadow: 0 0 4px #00ff00, 0 0 8px #00ff00;
+  }
   .neon-tooltip {
     font-size: 0.8rem;
     padding: 0.45rem 0.6rem;
